[package]
name = "rxd"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
sha2 = "0.10"
time = { version = "0.3.44", features = ["local-offset", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.10"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"
